--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,8 +6,8 @@ body
 {
 	margin: 0;
 	padding: 0;
-	color: #fdf6e3;
-	background-color: #002b36;
+	color: #073642;
+	background-color: #fdf6e3;
 	font: 1em/1.2 "Helvetica Neue", Helvetica, Arial, Geneva, sans-serif;
 }
 
