--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -98,7 +98,7 @@ Layout styles
 
 .nav-bar
 {
-	background: #eee8d5;
+	background: #93a1a1;
 	padding: 0;
 }
 
@@ -111,7 +111,7 @@ Layout styles
 .footer
 {
 	color: #586e75;
-	background: #eee8d5;
+	background: #93a1a1;
 	padding: 1em 1.25em;
 }
 
