--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,6 +6,7 @@ body
 {
 	margin: 0;
 	padding: 0;
+	background-color: #fff;
 	color: #073642;
 	font: 1em/1.2 "Helvetica Neue", Helvetica, Arial, Geneva, sans-serif;
 }
