--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -78,6 +78,7 @@ Layout styles
 {
 	display: block;
 	padding: .7em 1.25em;
+	font-weight: bold;
 	text-decoration: none;
 	border-bottom: 1px solid gray;
 }
