--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -79,6 +79,7 @@ Layout styles
 	display: block;
 	padding: .7em 1.25em;
 	font-weight: bold;
+	color: #fff;
 	text-decoration: none;
 	border-bottom: 1px solid gray;
 }
