--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -85,7 +85,10 @@ Layout styles
 }
 
 .nav a:link { color: white; }
+.nav a:visited { color: white; }
+.nav a:focus { color: #d33682; }
 .nav a:hover { color: #d33682; }
+.nav a:active { color: #d33682; }
 
 .container
 {
