--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -148,7 +148,11 @@ Single styles
 ------------------------*/
 
 .img-responsive { max-width: 100%; }
-.img-responsive-smaller { max-width: 80%; }
+.img-responsive-smaller {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 80%; }
 .btn
 {
 	color: #fff !important;
