--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -47,20 +47,43 @@ hr
 	border-top: 1px solid #ddd;
 }
 
-table
+table, tr
 {
 	background-color: transparent;
 	border-spacing: 0;
 	border-collapse: collapse;
-	border-top: 1px solid #ddd;
+	border-bottom: 1px solid #ddd;
 }
 
-th, td
+th
 {
 	padding: .5em 1em;
 	vertical-align: top;
 	text-align: left;
+	/*border-collapse: collapse;*/
+}
+
+
+td
+{
+	padding: .5em 1em;
+	vertical-align: top;
+	text-align: left;
+	/*border-collapse: collapse;*/
+	/*border-bottom: 1px solid #ddd;*/
+}
+
+/*tt
+{
+	padding: .5em 1em;
 	border-bottom: 1px solid #ddd;
+	vertical-align: bottom;
+	border-collapse: collapse;
+}*/
+
+.subrow
+{
+	border-bottom: none
 }
 
 
